docker/nodejs-docker-app/k8s/pod.yml
# Create a Kubernetes configuration file for a single Pod
# Author: Andrew Jarombek
# Date: 3/19/2019

# Version of the Kubernetes API.  Pods exist in the stable v1 version
apiVersion: v1
# What kind of object to deploy (in this case a Pod)
kind: Pod
# Metadata describing the Pod object
metadata:
  name: nodejs-app
  labels:
    app: nodejs-app
    version: v1.0.0
    environment: sandbox
spec:
  containers:
    # Unique name for the container in the pod
  - name: nodejs-app
    # Docker image to use for the container from DockerHub
    image: ajarombek/nodejs-docker-app:latest
    # Configure a network port for a container
    ports:
      # Port to expose on the container IP
    - containerPort: 3000
      # Protocol defaults to TCP
      protocol: TCP
