docker/nodejs-docker-app/k8s/all-in-one.yml
# A Kubernetes configuration file for a full deployment.  First deploy a service to expose pods outside the cluster.
# Then create a Pod.
# Author: Andrew Jarombek
# Date: 3/21/2019

apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  labels:
    version: v1.0.0
    environment: sandbox
spec:
  type: NodePort
  ports:
  - port: 3000
    nodePort: 30001
    protocol: TCP
  selector:
    app: nodejs-app

---

apiVersion: v1
kind: Pod
metadata:
  name: nodejs-app
  labels:
    app: nodejs-app
    version: v1.0.0
    environment: sandbox
spec:
  containers:
  - name: nodejs-app
    image: ajarombek/nodejs-docker-app:latest
    ports:
    - containerPort: 3000
      protocol: TCP
