docker/nodejs-docker-app/k8s/clusterip-svc.yml
# Create a Kubernetes configuration file for a single ClusterIP Service
# Author: Andrew Jarombek
# Date: 3/21/2019

apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-nodeport-service
  labels:
    version: v1.0.0
    environment: sandbox
spec:
  selector:
    matchLabels:
      app: nodejs-app
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
