docker/nodejs-docker-app/k8s/nodeport-svc.yml
# Create a Kubernetes configuration file for a single NodePort Service
# Author: Andrew Jarombek
# Date: 3/21/2019

apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-nodeport-service
  labels:
    version: v1.0.0
    environment: sandbox
spec:
  type: NodePort
  ports:
  - name: tcp
    port: 3000
    nodePort: 30001
    protocol: TCP
  selector:
    matchLabels:
      app: nodejs-app
